[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://sprite/Running/Run__001.png" type="Texture" id=2]
[ext_resource path="res://sprite/Idle/Idle__008.png" type="Texture" id=3]
[ext_resource path="res://sprite/Jump/Jump__009.png" type="Texture" id=4]
[ext_resource path="res://sprite/Running/Run__006.png" type="Texture" id=5]
[ext_resource path="res://sprite/Running/Run__000.png" type="Texture" id=6]
[ext_resource path="res://sprite/Running/Run__008.png" type="Texture" id=7]
[ext_resource path="res://sprite/Jump/Jump__004.png" type="Texture" id=8]
[ext_resource path="res://sprite/Running/Run__002.png" type="Texture" id=9]
[ext_resource path="res://sprite/Jump/Jump__000.png" type="Texture" id=10]
[ext_resource path="res://sprite/Running/Run__009.png" type="Texture" id=11]
[ext_resource path="res://sprite/Dead/Dead__007.png" type="Texture" id=12]
[ext_resource path="res://sprite/Jump/Jump__005.png" type="Texture" id=13]
[ext_resource path="res://sprite/Running/Run__004.png" type="Texture" id=14]
[ext_resource path="res://sprite/Jump/Jump__006.png" type="Texture" id=15]
[ext_resource path="res://sprite/Running/Run__007.png" type="Texture" id=16]
[ext_resource path="res://sprite/Dead/Dead__001.png" type="Texture" id=17]
[ext_resource path="res://sprite/Dead/Dead__004.png" type="Texture" id=18]
[ext_resource path="res://sprite/Jump/Jump__007.png" type="Texture" id=19]
[ext_resource path="res://sprite/Running/Run__005.png" type="Texture" id=20]
[ext_resource path="res://sprite/Running/Run__003.png" type="Texture" id=21]
[ext_resource path="res://sprite/Dead/Dead__000.png" type="Texture" id=22]
[ext_resource path="res://sprite/Jump/Jump__008.png" type="Texture" id=23]
[ext_resource path="res://sprite/Dead/Dead__002.png" type="Texture" id=24]
[ext_resource path="res://sprite/Dead/Dead__008.png" type="Texture" id=25]
[ext_resource path="res://sprite/Dead/Dead__003.png" type="Texture" id=26]
[ext_resource path="res://sprite/Dead/Dead__006.png" type="Texture" id=27]
[ext_resource path="res://sprite/Dead/Dead__009.png" type="Texture" id=28]
[ext_resource path="res://Itens/heart.png" type="Texture" id=29]
[ext_resource path="res://sprite/Idle/Idle__000.png" type="Texture" id=30]
[ext_resource path="res://sprite/Idle/Idle__004.png" type="Texture" id=31]
[ext_resource path="res://sprite/Idle/Idle__002.png" type="Texture" id=32]
[ext_resource path="res://sprite/Idle/Idle__003.png" type="Texture" id=33]
[ext_resource path="res://sprite/Idle/Idle__006.png" type="Texture" id=34]
[ext_resource path="res://sprite/Idle/Idle__005.png" type="Texture" id=35]
[ext_resource path="res://sprite/Idle/Idle__007.png" type="Texture" id=36]
[ext_resource path="res://sprite/Idle/Idle__009.png" type="Texture" id=37]
[ext_resource path="res://musics/jumping.wav" type="AudioStream" id=38]
[ext_resource path="res://musics/damage.wav" type="AudioStream" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 17 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 25 ), ExtResource( 28 ) ],
"loop": true,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 3 ), ExtResource( 37 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.4038, 36.304 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.804, 35.9279 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 0 )

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[node name="Personagem" type="KinematicBody2D"]
position = Vector2( 189.888, 323.48 )
collision/safe_margin = 0.01
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4.00003 )
scale = Vector2( 0.144031, 0.151558 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_as_relative = false
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.408005, -0.667007 )
rotating = true
current = true
limit_left = 30
limit_top = 0
limit_bottom = 315
drag_margin_v_enabled = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Energia" type="ProgressBar" parent="."]
margin_left = -16.0
margin_top = -48.0
margin_right = 24.0
margin_bottom = -32.0
rect_scale = Vector2( 1, 0.5 )
theme = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coração" type="Sprite" parent="."]
position = Vector2( -17.0449, -44.4336 )
scale = Vector2( 0.0141059, 0.0121931 )
texture = ExtResource( 29 )

[node name="pulo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
volume_db = -25.0

[node name="dano" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )
volume_db = -25.0

[node name="magia" type="Node2D" parent="."]

[node name="recarga_magia" type="Timer" parent="magia"]
wait_time = 0.5
one_shot = true

[node name="magia_direita" type="Position2D" parent="magia"]
position = Vector2( 150, 0 )

[node name="magia_esquerda" type="Position2D" parent="magia"]
position = Vector2( -60, 0 )
[connection signal="body_entered" from="Area2D2" to="." method="_dano_esferas"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_dano_esferas"]
[connection signal="body_entered" from="Area2D" to="." method="_matar_Player"]
[connection signal="timeout" from="magia/recarga_magia" to="." method="_on_recarga_magia_timeout"]
